<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#38B6FF"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_consumer_first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/consumer"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button_trending_keywords"
        app:layout_constraintTop_toBottomOf="@+id/textView_or" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/button_consumer_first_layout"
        app:layout_constraintTop_toBottomOf="@+id/button_business_first_layout" />

    <TextView
        android:id="@+id/textView_green_fix"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:text="@string/Pick_Me_Up"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/textView_are_you_a"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_are_you_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/are_you_a"
        android:textColor="#000000"
        android:textColorLink="#ECE5E5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/button_business_first_layout"
        app:layout_constraintTop_toBottomOf="@+id/textView_green_fix" />

    <Button
        android:id="@+id/button_business_first_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/business"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView_or"
        app:layout_constraintTop_toBottomOf="@+id/textView_are_you_a" />

    <Button
        android:id="@+id/button_trending_keywords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/trending_keywords"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_consumer_first_layout" />

    <ImageButton
        android:id="@+id/chatbot2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="#38B6FF"
        android:contentDescription="@string/chatbot"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/stat_notify_chat" />
</androidx.constraintlayout.widget.ConstraintLayout>